# tesd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  tesd.conf.example
src/: config.rs  main.rs
